Fix Overlapping Borders

--- a/resources/sass/octopy.scss
+++ b/resources/sass/octopy.scss
@@ -105,7 +105,7 @@
         border-radius: 50%;
         bottom: -1px;
         float: right;
-        height: 56px;
+        height: 57px;
         left: 0;
         margin-left: auto;
         margin-right: 0;
